--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="Refresh" content="0; url='https://www.aldajoyeros.com/'" />
+<meta http-equiv="Refresh" content="0; url='https://joyeriataffeit.es/30-joyas-de-oro'" />
